--- a/index.html
+++ b/index.html
@@ -37,12 +37,68 @@
                 <li class="contacts_item"><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        <button class="burger-btn" type="button">
+            <svg class="burger-icon" width="24" height="24">
+                 <use href="./images/icons.svg#icon-burger"></use>
+            </svg>
+        </button>
         </div>
+
+<div class="mobile-menu is-open">
+    <div class="container mobile-menu-container">
+       <button type="button" class="mobile-button">
+            <svg class="mobile-menu-close" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+            <ul class="mobile-nav-ul">
+                <li class="mobile-nav-item"><a class="mobile-nav-link current" href="./index.html">Studio</a></li>
+                <li class="mobile-nav-item"><a class="mobile-nav-link" href="">Portfolio</a></li>
+                <li class="mobile-nav-item"><a class="mobile-nav-link" href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <address class="mobile-menu-address">
+            <a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a><br>
+            <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+        </address>
+        <ul class="social-media">
+                    <li class="mobile-social-networks">
+                        <a class="link-mobile" href="https://www.instagram.com/">
+                            <svg class="mobile-icon-name" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mobile-social-networks">
+                        <a class="link-mobile" href="https://twitter.com/?lang=ru">
+                            <svg class="mobile-icon-name" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mobile-social-networks">
+                        <a class="link-mobile" href="https://it-it.facebook.com/">
+                            <svg class="mobile-icon-name" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mobile-social-networks">
+                        <a class="link-mobile" href="https://www.linkedin.com/">
+                            <svg class="mobile-icon-name" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+        </ul>
+    </div>
+</div>
     </header>
 
     <main>
         <!-- Секція №1 -->
-        <section class="first-section">
+        <section class="first-section hidden">
                 <div class="container">
             <h1 class="section-title-main">Effective Solutions for Your Business</h1>
             <button class="order-button" type="button">Order Service</button>
@@ -50,7 +106,7 @@
         </section>
 
 <!-- Секція №2 (Features) -->
-<section class="features-section section-light">
+<section class="features-section section-light hidden">
     <div class="container">
         <!-- Прихований заголовок -->
         <h2 class="visually-hidden">Features</h2>
@@ -100,7 +156,7 @@
 </section>
 
 <!-- Секція №3 (Features) -->
-<section class="team-section">
+<section class="team-section hidden">
     <div class="container">
         <h2 class="section-title-team">Our Team</h2>
         <ul class="team-list">
@@ -266,7 +322,7 @@
 </section>
 
         <!-- Секція №4 -->
-<section class="additional-section section-light">
+<section class="additional-section section-light hidden">
     <div class="container">
         <h2 class="section-title-portfolio">Our Portfolio</h2>
         <ul class="app-list">
@@ -334,7 +390,7 @@
     </div>
 </section>
     </main>
-        <footer class="page-footer">
+        <footer class="page-footer hidden">
             <div class="container footer-content">
                 <div class="footer-text-logo">
                     <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
@@ -393,7 +449,9 @@
             </div>
         </footer>
 
-<div class="backdrop is-open">
+    <!-- backdrop is-open -->
+
+<div class="backdrop hidden">
     <div class="modal">
     <button type="button" class="modal-button">
         <svg class="button-close" width="8" height="8">
