--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </section>
 
 <!-- Секція №3 (Features) -->
-<section class="team-section hidden">
+<section class="team-section">
     <div class="container">
         <h2 class="section-title-team">Our Team</h2>
         <ul class="team-list">
@@ -322,7 +322,7 @@
 </section>
 
         <!-- Секція №4 -->
-<section class="additional-section section-light hidden">
+<section class="additional-section section-light">
     <div class="container">
         <h2 class="section-title-portfolio">Our Portfolio</h2>
         <ul class="app-list">
