--- a/index.html
+++ b/index.html
@@ -162,7 +162,13 @@
         <ul class="team-list">
             <!-- Перший працівник -->
 <li class="team-item">
-        <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="360">
+        <picture>
+            <source srcset="./images/mark_guerrero-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                (min-resolution: 192dpi),
+                                                (-webkit-min-device-pixel-ratio: 2)">
+            <source srcset="./images/mark_guerrero.jpg">
+            <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="360">
+        </picture>
     <div class="team-info">
         <h3 class="team-name">Mark Guerrero</h3>
         <p class="team-role">Product Designer</p>
@@ -202,7 +208,13 @@
 </li>
             <!-- Другий працівник -->
             <li class="team-item">
-                    <img src="./images/tom_ford.jpg" alt="Tom Ford" width="360">
+                    <picture>
+                        <source srcset="./images/tom_ford-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                                    (min-resolution: 192dpi),
+                                                                        (-webkit-min-device-pixel-ratio: 2)">
+                        <source srcset="./images/tom_ford.jpg">
+                        <img src="./images/tom_ford.jpg" alt="Tom Ford" width="360">
+                    </picture>
                 <div class="team-info">
                     <h3 class="team-name">Tom Ford</h3>
                     <p class="team-role">Frontend Developer</p>
@@ -241,7 +253,13 @@
             </li>
             <!-- Третій працівник -->
             <li class="team-item">
-                    <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="360">
+                    <picture>
+                        <source srcset="./images/camila_garcia-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                                (min-resolution: 192dpi),
+                                                                    (-webkit-min-device-pixel-ratio: 2)">
+                        <source srcset="./images/camila_garcia.jpg">
+                        <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="360">
+                    </picture>
                 <div class="team-info">
                     <h3 class="team-name">Camila Garcia</h3>
                     <p class="team-role">Marketing</p>
@@ -280,7 +298,13 @@
             </li>
             <!-- Четвертий працівник -->
             <li class="team-item">
-                    <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="360">
+                    <picture>
+                        <source srcset="./images/daniel_wilson-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                                                    (min-resolution: 192dpi),
+                                                                                        (-webkit-min-device-pixel-ratio: 2)">
+                        <source srcset="./images/daniel_wilson.jpg">
+                        <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="360">
+                    </picture>
                 <div class="team-info">
                     <h3 class="team-name">Daniel Wilson</h3>
                     <p class="team-role">UI Designer</p>
@@ -328,7 +352,13 @@
         <ul class="app-list">
             <li class="app-item">
                 <div class="img-cover-wraper">
+                <picture>
+                    <source srcset="./images/banking_app-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                (min-resolution: 192dpi),
+                                                (-webkit-min-device-pixel-ratio: 2)">
+                    <source srcset="./images/banking_app.jpg">
                     <img src="./images/banking_app.jpg" alt="Banking App" width="360">
+                </picture>
                         <p class="text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="app-info">
@@ -338,7 +368,13 @@
             </li>
             <li class="app-item">
                 <div class="img-cover-wraper">
+                <picture>
+                    <source srcset="./images/cashless_payment-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                                (min-resolution: 192dpi),
+                                                                (-webkit-min-device-pixel-ratio: 2)">
+                    <source srcset="./images/cashless_payment.jpg">
                     <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360">
+                </picture>
                         <p class="text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="app-info">
@@ -348,7 +384,13 @@
             </li>
             <li class="app-item">
                 <div class="img-cover-wraper">
+                <picture>
+                    <source srcset="./images/meditation_app-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                                                (min-resolution: 192dpi),
+                                                                                (-webkit-min-device-pixel-ratio: 2)">
+                    <source srcset="./images/meditation_app.jpg">
                     <img src="./images/meditation_app.jpg" alt="Meditation App" width="360">
+                </picture>
                     <p class="text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="app-info">
@@ -358,7 +400,13 @@
             </li>
             <li class="app-item">
                 <div class="img-cover-wraper">
+                <picture>
+                    <source srcset="./images/taxi_service-2x-mob.jpg" media="(min-resolution: 2dppx),
+                                                                                                (min-resolution: 192dpi),
+                                                                                                (-webkit-min-device-pixel-ratio: 2)">
+                    <source srcset="./images/taxi_service.jpg">
                     <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360">
+                </picture>
                     <p class="text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="app-info">
@@ -368,7 +416,13 @@
             </li>
             <li class="app-item">
                 <div class="img-cover-wraper">
-                <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360">
+                <picture>
+                    <source srcset="./images/screen_illustrations-2x-mob.jpg"media="(min-resolution: 2dppx),
+                                                                                        (min-resolution: 192dpi),
+                                                                                            (-webkit-min-device-pixel-ratio: 2)">
+                    <source srcset="./images/screen_illustrations.jpg">
+                    <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360">
+                </picture>
                 <p class="text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
                 <div class="app-info">
@@ -378,7 +432,13 @@
             </li>
             <li class="app-item">
                 <div class="img-cover-wraper">
-                <img src="./images/online_courses.jpg" alt="Online Courses" width="360">
+                <picture>
+                    <source srcset="./images/online_courses-2x-mob.jpg"media="(min-resolution: 2dppx),
+                                                                                        (min-resolution: 192dpi),
+                                                                                            (-webkit-min-device-pixel-ratio: 2)">
+                    <source srcset="./images/online_courses.jpg">
+                    <img src="./images/online_courses.jpg" alt="Online Courses" width="360">
+                </picture>
                 <p class="text-img"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
                 <div class="app-info">
@@ -390,7 +450,7 @@
     </div>
 </section>
     </main>
-        <footer class="page-footer hidden">
+        <footer class="page-footer">
             <div class="container footer-content">
                 <div class="footer-text-logo">
                     <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
@@ -439,7 +499,7 @@
                             <input class="label-input" name="studio" type="email" placeholder="E-mail">
                         </label>
 
-                        <button class="form-button" type="submit">Subscribe
+                        <button class="form-button" type="submit"><p class="button-text">Subscribe</p>
                                                             <svg class="icon-telegram" width="24" height="24">
                                                                 <use href="./images/icons.svg#icon-telegram"></use>
                                                             </svg>
