styles backdrop modal

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                             <input class="label-input" name="studio" type="email" placeholder="E-mail">
                         </label>
 
-                        <button class="form-button" type="submit"><p class="button-text">Subscribe</p>
+                        <button class="form-button" type="submit">Subscribe
                                                             <svg class="icon-telegram" width="24" height="24">
                                                                 <use href="./images/icons.svg#icon-telegram"></use>
                                                             </svg>
@@ -511,7 +511,7 @@
 
     <!-- backdrop is-open -->
 
-<div class="backdrop hidden">
+<div class="backdrop is-open">
     <div class="modal">
     <button type="button" class="modal-button">
         <svg class="button-close" width="8" height="8">
